[package]
name = "tracing-test-subscriber"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <rajave@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.0-alpha.2"